--- a/Entrega3/dashboard/requirements.txt
+++ b/Entrega3/dashboard/requirements.txt
@@ -1,10 +1,12 @@
 streamlit>=1.28.0
 pandas>=1.5.0
 numpy>=1.21.0
+plotly>=5.0.0
 matplotlib>=3.5.0
 seaborn>=0.11.0
-plotly>=5.0.0
 scikit-learn>=1.0.0
 xgboost>=1.6.0
+tensorflow>=2.10.0
 joblib>=1.1.0
-pathlib
+pickle-mixin>=1.0.2
+pathlib2>=2.3.7
